test/typing/fail/creation_ops.py
# flake8: noqa

import torch

torch.tensor(1j, dtype=torch.int32)  # E: